# rust-linkchecker

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
linkchecker/: Cargo.toml
src/: client.rs  main.rs  models.rs  parser.rs
tests/: cli_tests.rs
