[package]
name = "rust-linkchecker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
scraper = "0.19"
pulldown-cmark = "0.10"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
